# burn_simple_llm

./: Cargo.toml
src/: inference.rs  main.rs
src/data/: loader.rs  mod.rs  processor.rs
src/model/: config.rs  network.rs
src/train/: metrics.rs  mod.rs  trainer.rs
