[package]
name = "Dynamic_programming_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {version="0.18.0", features = ["train", "wgpu", "ndarray"]}
burn-autodiff = "0.18.0"
burn-dataset = "0.18.0"
burn-tch = "0.18.0"
rand =  "0.8"
serde = {version="1.0", features = ["derive"]}
burn-ndarray = "0.11"